Release Notes

* 3/25/2019
  * task.architecture=cmtconfig@image

* 3/22/2019
  * setting task.currentprio=1500 if s or g in gridpref

* 3/18/2019
  * added --priority in panda-client
  * removed high prio from ready tasks in getTasksTBP

* 3/15/2019
  * to automatically fix empty memory requirements

* 3/11/2019
  * using fake in specialHandling for WAITING_CO_JUMBO

* 3/5/2019
  * added osMatching

* 2/28/2019
  * added useZipToPin

* 2/27/2019
  * checking nNewJobs when setting exhausted after scouts

* 2/19/2019
  * improved AtlasAJB for GPU PQs to request architecture matching

* 2/13/2019
  * added toStaging

* 2/5/2019
  * using nClosed in AtlasAJB

* 1/28/2019
  * added eshigh
  * prio boost for tasks with jumbo

* 1/17/2019
  * using nEventsReady for jumbo in AtlasPJB
  * not to count throttled jobs in nAct in AtlasAJB

* 1/15/2019
  * processingType=blah-cont for container based analysys
  * added USER_TASKS_MOVE_INPUT

* 12/21/2018
  * to use only MCORE for ES scouts

* 12/19/2018
  * to use only MCORE for ES with prio>=900

* 12/11/2018
  * disabled data locality check in AtlasAJB for taskPrio>=2000

* 12/3/2018
  * disabled IO intensity check when no candidate available permanently

* 11/29/2018
  * added correction to nPilot for resource shares
  * added release and nFiles checks to JumboWatchDog

* 11/26/2018
  * using 500kB for analysis outDiskCount
  * using 50GB for directIO maxSize

* 11/20/2018
  * using TAPE for IO intensity check in AtlasPJB

* 11/19/2018
  * added the second look in AtlasAJB to ignore data locality
  * set transient for finished+merged+100%

* 11/5/2018
  * using new task params for ES

* 10/24/2018
  * changed rerefine not to reset some attributes

* 10/22/2018
  * added proc_status

* 10/16/2018
  * added decAttOnFailedES

* 10/5/2018
  * added discardEvents in retryTask

* 9/24/2018
  * using resolve_archives=True in list_replicas

* 9/20/2018
  * added maxJumboPerSite

* 9/7/2018
  * added enableJumbo

* 7/23/2018